--- a/src/Components/Board/Board.module.css
+++ b/src/Components/Board/Board.module.css
@@ -2,15 +2,19 @@
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    margin: 0 auto;
+    justify-content: space-between;
 }
 
 .mainBoard {
     background-color: #3b3e52;
     padding: 10px;
+    width: 100%;
+
 }
 
 .board {
-    width: 240px;
+    width: 100%;
    background-color: #303446;
 
 }
@@ -68,4 +72,27 @@
     margin: 8px 0;
     text-align: left;
     font-size: 14px;
+}
+
+
+@media(min-width:600px) {
+    .mainBoard {
+        width: 45%;
+    }
+}
+
+@media(min-width:992px) {
+    .mainBoardContainer {
+        margin: 0;
+    }
+
+    .mainBoard {
+        width: 30%;
+    }
+}
+
+@media(min-width:1090px) {
+    .mainBoard {
+        width: 22%;
+    }
 }
