--- a/src/Components/topBar/topBar.module.css
+++ b/src/Components/topBar/topBar.module.css
@@ -18,6 +18,23 @@
     border: none;
 }
 
+.taskInput {
+    width: 274px;
+    padding: 10px;
+}
+
+.textareaContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.textarea {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
 .authorContainer {
     display: flex;
     align-items: center;
@@ -66,8 +83,8 @@
     padding-right: 15px;
 }
 
-.taskContainer p a {
-    color: #007bff;;
+.taskContainer button {
+    color: #007bff;
 }
 
 .btnContainer {
@@ -78,6 +95,9 @@
     color: #fff;
 }
 
+.saveBtn {
+    color: #fff;
+}
 
 @media (min-width:992px) {
     .mainsearchContainer {
