--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   font-weight: 400;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
