--- a/src/Components/Board/Board.module.css
+++ b/src/Components/Board/Board.module.css
@@ -1,3 +1,50 @@
+.features {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.mainiconContainer {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding-left: 15px;
+}
+
+.circleIcon {
+    display: flex;
+    align-items: center;
+}
+.iconContainer {
+    display: flex;
+    align-items: center;
+    gap:8px;
+}
+
+.iconContainer p {
+    margin: 0;
+    padding: 0;
+}
+
+.taskContainer {
+    display: flex;
+    align-items: center;
+    gap:20px;
+    padding-right: 15px;
+}
+
+.taskContainer button {
+    color: #007bff;
+}
+
+.btnContainer {
+    color: #fff;
+}
+
+.button {
+    color: #fff;
+}
 .mainBoardContainer {
     display: flex;
     align-items: center;
@@ -74,6 +121,32 @@
     font-size: 14px;
 }
 
+.taskInput {
+    width: 274px;
+    padding: 10px;
+}
+
+.textareaContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.textarea {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.selectarea {
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+.saveBtn {
+    color: #fff;
+}
+
 
 @media(min-width:600px) {
     .mainBoard {
@@ -88,6 +161,15 @@
 
     .mainBoard {
         width: 30%;
+    }
+
+    .features {
+        padding:0px;
+    }
+
+    .mainiconContainer {
+        padding: 20px 60px;
+        gap: 15px;
     }
 }
 
