--- a/src/index.css
+++ b/src/index.css
@@ -54,19 +54,23 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-/* @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
+
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer compononets {
+  .socialIcon {
+    @apply flex items-center gap-2 justify-center mt-2 border border-gray-400 w-full mx-auto
+  }
+
+/* .input {
+    @apply w-full mb-10 p-2 rounded-lg border border-gray-400 bg-red-600 
+  } */
+
+.selectInput {
+    @apply w-full p-2.5 mb-2 rounded-lg border border-gray-400 bg-transparent mt-2
+  }
+}
